--- a/style.css
+++ b/style.css
@@ -743,11 +743,14 @@ button:hover {
 .about-headerwrapper {
   display: flex;
   align-items: baseline;
+  margin-bottom: 0.5em;
 }
 
 .about-blue-triangle {
-  margin-left: 1.5em;
+  margin-left: -1.5em;
+  z-index:-1;
   width: 70px;
+  align-self: end;
 }
 .aboutpage_right {
   width: 45%;
