--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ html {
   margin-left: 2em;
 }
 .hero {
-  margin-top: 2.5em;
+  margin-top: 1em;
   font-family: Roobert;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -175,6 +175,7 @@ html {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  /* background-color: red; */
 }
 
 .main-title {
@@ -255,6 +256,14 @@ button:hover {
   font-size: 1.5em;
 }
 
+.hero_body > span {
+  display: block;
+}
+
+.hero_body > span + span {
+  margin-top: 1em;
+}
+
 .hero_left {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -282,10 +291,9 @@ button:hover {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  margin-top: 2em;
+  /* align-self: flex-start; */
 }
 .abstract-shapes {
-  height: 80%;
   -ms-flex-item-align: end;
   align-self: flex-end;
   z-index: 2;
